--- a/mlde/preamble.tex
+++ b/mlde/preamble.tex
@@ -6,3 +6,12 @@
   \thm@postskip=\thm@preskip
 }
 \makeatother
+
+\newcommand{\Norm}[2]{\operatorname{N}\left(#1,#2\right)}
+\newcommand{\Chisq}[1]{\operatorname{\chi}_{#1}}
+\newcommand{\Dt}[1]{\operatorname{t}_{#1}}
+\newcommand{\DF}[2]{\operatorname{F}_{#1,#2}}
+\newcommand{\DK}{\operatorname{K}}
+\newcommand{\DExp}[1]{\operatorname{Exp}\left(#1\right)}
+\newcommand{\Abs}[1]{\lvert #1 \rvert}
+\newcommand{\lto}{\ensuremath{\overset{\mathcal{L}}{\to}}} % Converge en ley
